--- a/src/global.scss
+++ b/src/global.scss
@@ -3,7 +3,7 @@ body, html {
 }
 
 body {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   color: #242424;
   margin: 0;
   padding: 0;
