--- a/src/CountrySelector/CountrySelector.module.scss
+++ b/src/CountrySelector/CountrySelector.module.scss
@@ -1,8 +1,20 @@
 @import "../mixins";
 
 $country-color: #F5F5F5;
+$border: 1px solid rgba(0, 0, 0, 0.1);
 
-.root {
+.heading {
+  margin-top: 70px;
+  margin-bottom: 32px;
+}
+
+.content {
+  border-top: $border;
+  border-bottom: $border;
+  padding: 24px 0;
+}
+
+.contentInner {
   display: flex;
   margin: -12px;
 }
