--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -50,6 +50,13 @@
   border: 1px solid #FF1C1C;
   color: #FF1C1C;
   font-size: 20px;
+  font-weight: 600;
+}
+
+.description {
+  font-size: 18px;
+  line-height: 28px;
+  font-weight: 300;
 }
 
 .highlight {
