--- a/src/Messages/Messages.module.scss
+++ b/src/Messages/Messages.module.scss
@@ -1,3 +1,5 @@
+@import "../mixins";
+
 $border: 1px solid rgba(0, 0, 0, 0.1);
 
 .root {
@@ -9,6 +11,19 @@ $border: 1px solid rgba(0, 0, 0, 0.1);
   display: flex;
   text-align: left;
   justify-content: center;
+
+  @include for-phone-only {
+    flex-wrap: wrap;
+    margin: 30px 0;
+    border-bottom: $border;
+    border-top: $border;
+  }
+}
+
+.header {
+  @include for-phone-only {
+    display: none;
+  }
 }
 
 .index {
@@ -22,6 +37,10 @@ $border: 1px solid rgba(0, 0, 0, 0.1);
   .header & {
     border-top: $border;
   }
+
+  @include for-phone-only {
+    display: none;
+  }
 }
 
 .message {
@@ -32,6 +51,16 @@ $border: 1px solid rgba(0, 0, 0, 0.1);
   font-weight: 300;
   font-size: 18px;
   line-height: 28px;
+
+  @include for-phone-only {
+    flex-basis: 100%;
+    border-right: $border;
+    padding: 20px;
+
+    &:last-child {
+      border-bottom: none;
+    }
+  }
 
   .header & {
     border-top: $border;
