--- a/src/Info/Info.module.scss
+++ b/src/Info/Info.module.scss
@@ -18,6 +18,10 @@
   display: flex;
   flex-wrap: wrap;
   margin: -15px;
+
+  @include for-phone-only {
+    margin: -5px;
+  }
 }
 
 .card {
@@ -27,6 +31,7 @@
 
   @include for-phone-only {
     flex-basis: 100%;
+    padding: 5px;
   }
 }
 
