--- a/src/Footer/Footer.module.scss
+++ b/src/Footer/Footer.module.scss
@@ -11,4 +11,14 @@
   font-size: 20px;
   line-height: 1.3;
   color: #fff;
+
+  a {
+    &:visited {
+      color: #fff;
+    }
+
+    &:hover {
+      color: darken(#fff, 20%);
+    }
+  }
 }
