--- a/src/ModeSelector/ModeSelector.module.scss
+++ b/src/ModeSelector/ModeSelector.module.scss
@@ -15,7 +15,7 @@ $initial-background: #F5F5F5;
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
-  width: 185px;
+  flex: 0 1 185px;
   background-color: $initial-background;
   font-size: 16px;
   line-height: 1;
