Add KoordyNatsiya partner

--- a/src/Info/Info.module.scss
+++ b/src/Info/Info.module.scss
@@ -49,6 +49,11 @@
   bottom: calc(100% - 90px);
 }
 
+.flag {
+  font-size: 55px;
+  line-height: 1;
+}
+
 .organizationTitle {
   padding-top: 110px;
   font-size: 22px;
