--- a/src/Messages/Messages.module.scss
+++ b/src/Messages/Messages.module.scss
@@ -103,4 +103,9 @@ $border: 1px solid rgba(0, 0, 0, 0.1);
   p {
     margin: 0;
   }
+
+  ul {
+    margin: 5px 0;
+    padding-left: 30px;
+  }
 }
