--- a/src/Messages/Messages.module.scss
+++ b/src/Messages/Messages.module.scss
@@ -72,6 +72,7 @@ $border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .message {
+  position: relative;
   border-left: $border;
   border-bottom: $border;
   flex: 0 1 100%;
@@ -87,6 +88,10 @@ $border: 1px solid rgba(0, 0, 0, 0.1);
   // for some reason our font doesn't support georgian
   &:global(.ka) {
     font-family: sans-serif;
+  }
+
+  &.withShareButtons:not(:global(.uk)) {
+    padding-bottom: 70px;
   }
 
   &:before {
@@ -129,5 +134,16 @@ $border: 1px solid rgba(0, 0, 0, 0.1);
   ul {
     margin: 5px 0;
     padding-left: 30px;
+  }
+}
+
+.shareMenu {
+  position: absolute;
+  bottom: 0;
+  left: 40px;
+  right: 0;
+
+  @include for-phone-only() {
+    left: 0;
   }
 }
