Init upgrade, header + footer

--- a/src/Messages/Messages.module.scss
+++ b/src/Messages/Messages.module.scss
@@ -1,149 +1,5 @@
 @import "../mixins";
 
-$border: 1px solid rgba(0, 0, 0, 0.1);
-
-.root {
-  overflow: auto;
-
-  @include for-phone-only {
-    overflow: initial;
-  }
-}
-
-.row {
-  display: flex;
-  text-align: initial;
-
-  @include for-phone-only {
-    flex-wrap: wrap;
-    margin: 15px 0;
-    border-bottom: $border;
-    border-top: $border;
-  }
-
-  &.oneColumn {
-    justify-content: center;
-  }
-}
-
-.header {
-  @include for-phone-only {
-    .index {
-      display: none;
-    }
-
-    .message {
-      border-top: none;
-    }
-  }
-}
-
-.index {
-  position: relative;
-  padding: 30px 0 0 20px;
-  flex: 0 0 50px;
-  box-sizing: border-box;
-  font-size: 16px;
-  line-height: 26px;
-  font-weight: 600;
-  border-bottom: $border;
-
-  .header & {
-    border-top: $border;
-  }
-
-  .highlighted & {
-    background-color: #FF0000;
-  }
-
-  @include for-phone-only {
-    display: none;
-  }
-}
-
-.highlightedLabel {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(270deg);
-  font-size: 22px;
-  line-height: 1;
-  color: #fff;
-}
-
-.message {
-  position: relative;
-  border-left: $border;
-  border-bottom: $border;
-  flex: 0 1 100%;
-  min-width: 300px;
-  max-width: 575px;
-  overflow: auto;
-  box-sizing: border-box;
-  padding: 30px 40px;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 28px;
-
-  // for some reason our font doesn't support georgian
-  &:global(.ka) {
-    font-family: sans-serif;
-  }
-
-  &:not(:global(.uk)) {
-    padding-bottom: 70px;
-  }
-
-  &:before {
-    display: none !important; // override css-flags styles
-  }
-
-  @include for-phone-only {
-    flex-basis: 100%;
-    border-right: $border;
-    padding: 20px;
-    min-width: auto;
-    max-width: initial;
-
-    &:last-child {
-      border-bottom: none;
-    }
-  }
-
-  .header & {
-    border-top: $border;
-    padding: 11px 40px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 18px;
-
-    @include for-phone-only {
-      border-top: none;
-      padding: 11px 20px;
-    }
-  }
-
-  .highlighted & {
-    font-weight: 600;
-  }
-
-  p {
-    margin: 0;
-  }
-
-  ul {
-    margin: 5px 0;
-    padding-left: 30px;
-  }
-}
-
-.shareMenu {
-  position: absolute;
-  bottom: 0;
-  left: 40px;
-  right: 0;
-
-  @include for-phone-only() {
-    left: 0;
-  }
+.content {
+  background: #F4F4F4;
 }
