--- a/src/Footer/Footer.module.scss
+++ b/src/Footer/Footer.module.scss
@@ -1,26 +1,57 @@
 .root {
-  background: #242424;
-
+  background-color: #5B5B5B;
+  padding: 20px 0 35px;
 }
 
 .inner {
-  padding: 32px 20px;
-  max-width: 800px;
+  max-width: var(--content-width);
   margin: 0 auto;
-  text-align: center;
-  font-size: 20px;
-  line-height: 1.3;
-  color: #fff;
+}
 
-  a {
-    color: #fff;
+.top {
+  display: flex;
+  align-items: center;
+}
 
-    &:visited {
-      color: #fff;
-    }
+.description {
+  color: #FFF;
+  max-width: 550px;
+  font-size: 12px;
+  line-height: 15px;
+  margin-left: 40px;
+}
 
-    &:hover {
-      color: darken(#fff, 20%);
+.socials {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  margin-left: auto;
+}
+
+.social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 21px;
+  height: 21px;
+  margin: 0 12px;
+
+  path {
+    transition: fill .3s ease-in-out;
+  }
+
+  &:hover {
+    path {
+      fill: #B4B4B4;
     }
   }
+}
+
+.copyright {
+  display: block;
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 13px;
+  margin-top: 20px;
+  color: #9B9B9B;
 }
