--- a/src/global.scss
+++ b/src/global.scss
@@ -1,10 +1,13 @@
+html {
+  --content-width: 1120px;
+}
+
 body, html {
   height: 100%;
 }
 
 body {
-  font-family: 'Nunito Sans', sans-serif;
-  color: #242424;
+  font-family: 'Mulish', sans-serif;
   margin: 0;
   padding: 0;
 }
