More markup for home page

--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -1,6 +1,7 @@
 .root {
   max-width: var(--content-width);
   margin: 0 auto;
+  padding-top: 5px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
