--- a/src/Heading/Heading.module.scss
+++ b/src/Heading/Heading.module.scss
@@ -1,8 +1,16 @@
-.root {
+.h1 {
   font-size: 30px;
   line-height: 36px;
   text-align: center;
   font-weight: 700;
   max-width: 650px;
   margin: 36px auto 26px;
+}
+
+.h3 {
+  font-size: 24px;
+  line-height: 48px;
+  font-weight: 700;
+  color: #DE0303;
+  margin: 0;
 }
