--- a/src/Messages/Messages.module.scss
+++ b/src/Messages/Messages.module.scss
@@ -45,12 +45,14 @@
 .cards {
   display: flex;
   flex-wrap: wrap;
-  margin: 20px -16px 0;
+  margin: 10px -16px 0;
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
   flex: 0 1 352px;
-  margin: 0 16px;
+  margin: 16px;
   background-color: #fff;
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.05);
   border-radius: 5px;
@@ -58,10 +60,27 @@
 
 .poster {
   max-width: 100%;
+  padding-top: 100%;
+  height: 0;
+  position: relative;
+  overflow: hidden;
+
+  img {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    width: auto;
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 .cardInner {
   padding: 15px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .cardDate {
@@ -71,10 +90,11 @@
 }
 
 .message {
+  flex-grow: 1;
   font-size: 12px;
   line-height: 15px;
 }
 
 .shareMenu {
-  margin-top: 30px;
+  margin-top: 10px;
 }
