--- a/src/Messages/Messages.module.scss
+++ b/src/Messages/Messages.module.scss
@@ -70,9 +70,9 @@
     transform: translate(-50%, -50%);
     left: 50%;
     top: 50%;
-    width: auto;
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
