--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -1,7 +1,17 @@
+@import "../mixins";
+
+@mixin hamburger-line {
+  width: 100%;
+  height: 3px;
+  background-color: black;
+  position: absolute;
+  left: 0;
+}
+
 .root {
   max-width: var(--content-width);
   margin: 0 auto;
-  padding-top: 5px;
+  padding: 5px var(--gutter) 0;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -16,9 +26,86 @@
   align-items: center;
 }
 
+.hamburgerButton {
+  display: none;
+  @extend %reset-button;
+
+  @include for-phone-only() {
+    display: block;
+  }
+}
+
+.hamburgerBox {
+  display: block;
+  width: 30px;
+  height: 24px;
+  position: relative;
+  z-index: 10;
+}
+
+.hamburgerInner {
+  @include hamburger-line;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: background-color 0.2s ease-in-out;
+
+  .active & {
+    background-color: transparent;
+  }
+
+  &::before,
+  &::after {
+    @include hamburger-line;
+    content: "";
+    transition: transform 0.2s ease-in-out;
+  }
+
+  &::before {
+    top: -10px;
+
+    .active & {
+      transform: translateY(10px) rotate(45deg);
+    }
+  }
+
+  &::after {
+    top: 10px;
+
+    .active & {
+      transform: translateY(-10px) rotate(-45deg);
+    }
+  }
+}
+
+.navigationItems {
+  display: flex;
+  align-items: center;
+
+  @include for-phone-only() {
+    display: none;
+    position: fixed;
+    padding: 50px 10px;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: #DBDBDB;
+
+    &.active {
+      display: block;
+    }
+  }
+}
+
 .menu {
   list-style: none;
   display: flex;
+  padding: 0;
+
+  @include for-phone-only() {
+    display: block;
+  }
 }
 
 .link {
@@ -39,6 +126,10 @@
 
 .langSelector {
   display: flex;
+
+  @include for-phone-only() {
+    margin-left: 12px;
+  }
 }
 
 .langItem {
@@ -62,5 +153,14 @@
 
   &.active {
     border-color: #A5A3A3;
+  }
+
+  @include for-phone-only() {
+    background-color: transparent;
+
+    &.active {
+      color: #000;
+      border-color: #FFF;
+    }
   }
 }
