Make other pages mobile friendly

--- a/src/JoinPage/JoinPage.module.scss
+++ b/src/JoinPage/JoinPage.module.scss
@@ -1,6 +1,9 @@
+@import "../mixins";
+
 .root {
   max-width: var(--small-content-width);
   margin: 0 auto;
+  padding: 0 var(--gutter);
 
   font-weight: 600;
   font-size: 14px;
@@ -16,6 +19,10 @@
   padding: 30px 0 0 115px;
   margin-top: 40px;
   box-sizing: border-box;
+
+  @include for-phone-only() {
+    padding-left: 0;
+  }
 
   &:before {
     content: "";
@@ -39,10 +46,22 @@
   font-size: 20px;
   line-height: 24px;
   margin: 0;
+
+  @include for-phone-only() {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 20px;
+  }
 }
 
 .helpIcon {
   position: absolute;
   top: 40px;
-  left: 25px
+  left: 25px;
+
+  @include for-phone-only() {
+    position: static;
+    display: inline-block;
+    vertical-align: middle;
+  }
 }
