--- a/src/ShareMenu/ShareMenu.module.scss
+++ b/src/ShareMenu/ShareMenu.module.scss
@@ -1,4 +1,4 @@
-@import "../../mixins";
+@import "../mixins";
 
 .root {
   display: flex;
@@ -23,7 +23,13 @@
   box-sizing: border-box;
   margin-right: 15px;
 
-  path {
+  .isGalleryShare & {
+    margin: 0 8px;
+    color: #FFF;
+    border: 1px solid #FFF;
+  }
+
+  path, stroke {
     transition: fill .2s ease-in-out;
   }
 
@@ -31,8 +37,9 @@
     border-color: #9A0101;
     color: #9A0101;
 
-    path {
-      fill: #9A0101;
+    .isGalleryShare & {
+      border-color: darken(#FFF, 20%);
+      color: darken(#FFF, 20%);
     }
   }
 }
@@ -58,12 +65,6 @@
       fill: darken(#A2A2A2, 20%);
     }
   }
-}
-
-.twitter {
-}
-
-.facebook {
 }
 
 .nativeShare {
