--- a/src/Gallery/Gallery.module.scss
+++ b/src/Gallery/Gallery.module.scss
@@ -7,6 +7,7 @@
 .masonryGrid {
   display: flex;
   margin-left: -20px; /* gutter size offset */
+  margin-top: 30px;
   width: auto;
   min-height: 1000px;
 }
