--- a/src/Heading/Heading.module.scss
+++ b/src/Heading/Heading.module.scss
@@ -13,4 +13,16 @@
   font-weight: 700;
   color: #DE0303;
   margin: 0;
+
+  &.dark {
+    color: #000;
+  }
+}
+
+.h4 {
+  font-size: 24px;
+  line-height: 1.25;
+  font-weight: 600;
+  color: #000;
+  margin: 0;
 }
