--- a/src/Pagination/Pagination.module.scss
+++ b/src/Pagination/Pagination.module.scss
@@ -5,6 +5,7 @@
   list-style: none;
   padding: 0;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .button {
@@ -12,7 +13,7 @@
   width: 50px;
   height: 50px;
   box-sizing: border-box;
-  margin: 0 10px;
+  margin: 5px;
   cursor: pointer;
 
   &.isActive {
