--- a/src/Partners/Partners.module.scss
+++ b/src/Partners/Partners.module.scss
@@ -12,17 +12,18 @@
 
 .list {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .listItem {
   width: 100px;
-  margin: 0 40px;
+  margin: 15px 40px;
 
   @include for-phone-only() {
-    margin: 0 15px;
+    margin: 15px;
   }
 }
 
